@@ -1,5 +1,13 @@
 2012-01-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/daase.lisp, src/interp/fname.lisp,
+	src/interp/Makefile.in, src/interp/nlib.lisp,
+	 src/interp/patches.lisp, src/interp/sys-pkg.lisp,
+	src/interp/vmlisp.lisp, src/lisp/fricas-package.lisp:
+	Remove VMLISP package.
+
+2012-01-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/interp/g-util.boot, src/interp/macros.lisp,
 	src/interp/nlib.lisp, src/interp/util.lisp,
 	src/interp/vmlisp.lisp: Misc cleanups.
